Corrected typos and added subscriptions

--- a/cursos/cursos.html
+++ b/cursos/cursos.html
@@ -18,7 +18,7 @@ title: Inicio
 		<div class="wrap">
 			<h2>Cursos</h2>
 			<p>
-				El Grupo Excursionista Oikos ofrece tres cursos, donde se busca instruir a los participantes en las practicas, teoría y conocimientos necesarios para realizar montaña y escalada. Los cursos se encuentran abiertos a la comunidad universitaria de la Universidad Simón Bolívar y a personas externas a la universidad.
+				El Grupo Excursionista Oikos ofrece tres cursos, donde se busca instruir a los participantes en las prácticas, teoría y conocimientos necesarios para realizar montaña y escalada. Los cursos se encuentran abiertos a la comunidad universitaria de la Universidad Simón Bolívar y a personas externas a la universidad.
 			</p>
 		</div>
 	</section>
@@ -28,17 +28,17 @@ title: Inicio
 			<div class="cards">
 				<div class="card-2 corners">
 					<span class="icon-baja"></span>
-					<h3>Curso Baja y media montaña</h3>
+					<h3>Baja y Media Montaña</h3>
 					<a href="{{ site.url }}/c-baja.html"><input type="button" class="btn corners white" value="+Info"></a>
 				</div>
 				<div class="card-2 corners">
 					<span class="icon-escalada"></span>
-					<h3>Curso Escalada en roca</h3>
+					<h3>Escalada en Roca</h3>
 					<a href="{{ site.url }}/c-roca.html"><input type="button" class="btn corners white" value="+Info"></a>
 				</div>
 				<div class="card-2 corners">
 					<span class="icon-alta"></span>
-					<h3>Curso Alta montaña</h3>
+					<h3>Alta Montaña</h3>
 					<a href="{{ site.url }}/c-alta.html"><input type="button" class="btn corners white" value="+Info"></a>
 				</div>
 			</div>
