--- a/cursos/c-alta.html
+++ b/cursos/c-alta.html
@@ -39,31 +39,7 @@ title: Curso de Alta Montaña
 		<p>
 			Si deseas mantenerte al tanto de las próximas fechas para este curso y otras actividades del oikos te invitamos a:
 		</p>
-		<div class="enter">
-			<!-- Begin MailChimp Signup Form -->
-			<div id="mc_embed_signup">
-				<form action="http://usb.us12.list-manage.com/subscribe/post?u=541778c3f1d078f1dda14ccbd&amp;id=45b2286f12" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-				    <div id="mc_embed_signup_scroll">
-						<!--<h2>Subscribe to our mailing list</h2>
-						<div class="indicates-required"><span class="asterisk">*</span> indicates required</div>-->
-						<div class="mc-field-group enter">
-							<label for="mce-EMAIL">Suscribirte a nuestro boletín <!--<span class="asterisk">*</span>--></label>
-							<input placeholder="usuario@correo.com" type="email" value="" name="EMAIL" class="required email in corners" id="mce-EMAIL">
-						</div>
-						<div id="mce-responses" class="clear">
-							<div class="response" id="mce-error-response" style="display:none"></div>
-							<div class="response" id="mce-success-response" style="display:none"></div>
-						</div> 
-
-						<!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-					    <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_541778c3f1d078f1dda14ccbd_45b2286f12" tabindex="-1" value=""></div>
-
-					    <div class="clear mask"><input type="submit" value="Go" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
-					    <span class="icon-go"></span>
-				    </div>
-				</form>
-			</div>
-		</div>
+				{% include subscribe.html %}
 		<p>
 			o
 		</p>
