--- a/cursos/c-roca.html
+++ b/cursos/c-roca.html
@@ -35,13 +35,13 @@ title: Curso de Roca
 				<li>Descripción y mecanismos del funcionamiento de los seguros utilizados en la escalada en roca.</li>
 				<li>Funciones y usos de los nudos: ocho simple, ocho doble, ocho recorrido, dinámico, estático, nudo plano, prusik y mariposa.</li>
 				<li>Técnica de progresión y aseguramiento en cordada.</li>
-				<li>Técnica de descenso y montaje de rappel.</li>
+				<li>Técnica de descenso y montaje de rapel.</li>
 				<li>Técnicas de escalada para la progresión en diedros y chimeneas.</li>
 				<li>Aspectos generales de las reuniones (puntos de anclaje).</li>
 			</ul>
 		</p>
 		<p>
-			Para pasar el curso se realiza una evaluación final que consiste en un examen práctico sobre nudos y sus usos y la realización de dos rutas secundiando y limpiando.
+			Para pasar el curso se realiza una evaluación final que consiste en un examen práctico sobre nudos y sus usos y la realización de dos rutas segundando y limpiando.
 		</p>
 		<p>
 			Los instructores del curso son miembros de OIKOS. Debido a que hay un número limitado de instructores y mucha demanda de este curso, la prioridad para realizar el curso se le da a los miembros de la agrupación y a personas que muestren un alto interés en pertenecer al GEO y a la práctica del deporte. Sin embargo, cualquier persona puede hacer el curso. Deben acercarse a la sede de la agrupación y anotarse en la lista de personas interesadas.
@@ -50,31 +50,7 @@ title: Curso de Roca
 		<p>
 			Si deseas mantenerte al tanto de las próximas fechas para este curso y otras actividades del oikos te invitamos a:
 		</p>
-		<div class="enter">
-			<!-- Begin MailChimp Signup Form -->
-			<div id="mc_embed_signup">
-				<form action="http://usb.us12.list-manage.com/subscribe/post?u=541778c3f1d078f1dda14ccbd&amp;id=45b2286f12" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-				    <div id="mc_embed_signup_scroll">
-						<!--<h2>Subscribe to our mailing list</h2>
-						<div class="indicates-required"><span class="asterisk">*</span> indicates required</div>-->
-						<div class="mc-field-group enter">
-							<label for="mce-EMAIL">Suscribirte a nuestro boletín <!--<span class="asterisk">*</span>--></label>
-							<input placeholder="usuario@correo.com" type="email" value="" name="EMAIL" class="required email in corners" id="mce-EMAIL">
-						</div>
-						<div id="mce-responses" class="clear">
-							<div class="response" id="mce-error-response" style="display:none"></div>
-							<div class="response" id="mce-success-response" style="display:none"></div>
-						</div> 
-
-						<!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-					    <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_541778c3f1d078f1dda14ccbd_45b2286f12" tabindex="-1" value=""></div>
-
-					    <div class="clear mask"><input type="submit" value="Go" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
-					    <span class="icon-go"></span>
-				    </div>
-				</form>
-			</div>
-		</div>
+				{% include subscribe.html %}
 		<p>
 			o
 		</p>
