--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@ title: Inicio
 </section>
 <section class="events">
 	<div class="twitter">
-		<a class="twitter-timeline" data-width="90%" data-height="750" href="https://twitter.com/OikosUSB?ref_src=twsrc%5Etfw">Tweets de OikosUSB</a>
-		<script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+		<!-- <a class="twitter-timeline" data-width="90%" data-height="750" href="https://twitter.com/OikosUSB?ref_src=twsrc%5Etfw">Tweets de OikosUSB</a>
+		<script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script> -->
 	</div>
 	<div class="wrap-twitter">
 		<h2>Eventos y Noticias</h2>
