--- a/cursos/cursos.html
+++ b/cursos/cursos.html
@@ -7,7 +7,7 @@ title: Inicio
 	
 	<!-- ===== PRINCIPAL ===== -->
 	<div class="hero-vl hero-vl-1" id="hero-vl-index">
-		<img src="{{ site.url }}/assets/img/cursos.jpg" alt="">
+		<img src="{{ site.baseurl }}/assets/img/cursos.jpg" alt="">
 		<div class="hero hero-1" id="hero-index">
 			<div class="jumbotron corners">
 				<h1><span>Baja y Media Montaña</span><br>Escalada<br>Alta Montaña</h1>
@@ -29,17 +29,17 @@ title: Inicio
 				<div class="card-2 corners">
 					<span class="icon-baja"></span>
 					<h3>Baja y Media Montaña</h3>
-					<a href="{{ site.url }}/c-baja.html"><input type="button" class="btn corners white" value="+Info"></a>
+					<a href="{{ site.baseurl }}/c-baja.html"><input type="button" class="btn corners white" value="+Info"></a>
 				</div>
 				<div class="card-2 corners">
 					<span class="icon-escalada"></span>
 					<h3>Escalada en Roca</h3>
-					<a href="{{ site.url }}/c-roca.html"><input type="button" class="btn corners white" value="+Info"></a>
+					<a href="{{ site.baseurl }}/c-roca.html"><input type="button" class="btn corners white" value="+Info"></a>
 				</div>
 				<div class="card-2 corners">
 					<span class="icon-alta"></span>
 					<h3>Alta Montaña</h3>
-					<a href="{{ site.url }}/c-alta.html"><input type="button" class="btn corners white" value="+Info"></a>
+					<a href="{{ site.baseurl }}/c-alta.html"><input type="button" class="btn corners white" value="+Info"></a>
 				</div>
 			</div>
 		</div>	
