--- a/expediciones/expediciones.html
+++ b/expediciones/expediciones.html
@@ -6,7 +6,7 @@ title: Expediciones
 	
 	<div class="container">
 		<div class="hero-vl hero-vl-1">
-			<img src="{{ site.url }}/assets/img/hero-expediciones.jpg" alt="">
+			<img src="{{ site.baseurl }}/assets/img/hero-expediciones.jpg" alt="">
 		</div>
 		<div class="wrap content-wrap">
 			<h1 class="title" id="title-expediciones">Expediciones</h1>
