--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ title: Inicio
 			el GEO ha sido hogar de más de 2000 personas, ascendido más de 100 montañas y realizado más de 70 expediciones nacionales
 			e internacionales.
 		</p>
-		<a href="{{ site.url }}/cursos.html">
+		<a href="{{ site.baseurl }}/cursos.html">
 			<input type="button" class="btn blue corners" value="Conoce más">
 		</a>
 	</div>
