--- a/nosotros/n-honorarios.html
+++ b/nosotros/n-honorarios.html
@@ -14,7 +14,7 @@ title: Miembros Honorarios
 		{% for honorario in site.data.honorarios %}
 			<div class="card corners">
 				<div class="card-img">
-					<img src="{{ site.url }}/{{ honorario.picture }}" alt="">
+					<img src="{{ site.baseurl }}/{{ honorario.picture }}" alt="">
 				</div>
 				<div class="card-info">
 					<h3>{{ honorario.name }}</h3>
