--- a/nosotros/n-oikos.html
+++ b/nosotros/n-oikos.html
@@ -5,7 +5,7 @@ title: Oikos
 ---
 	<div class="container">
 		<div class="hero-vl hero-vl-1">
-			<img src="{{ site.url }}/assets/img/hero-n-oikos.jpg" alt="">
+			<img src="{{ baseurl }}/assets/img/hero-n-oikos.jpg" alt="">
 		</div>
 		<div class="wrap content-wrap">
 			<h1 class="title">Oikos</h1>
