--- a/nosotros/n-miembros.html
+++ b/nosotros/n-miembros.html
@@ -14,7 +14,7 @@ title: Miembros
 		{% for miembro in site.data.miembros %}
 			<div class="card corners">
 				<div class="card-img">
-					<img src="{{ site.url }}/{{ miembro.picture }}" alt="">
+					<img src="{{ baseurl }}/{{ miembro.picture }}" alt="">
 				</div>
 				<div class="card-info">
 					<h3>{{ miembro.name }}</h3>
