--- a/nosotros/n-jd.html
+++ b/nosotros/n-jd.html
@@ -17,7 +17,7 @@ title: Junta Directiva
 			{% for junta in site.data.junta %}
 			<div class="card corners">
 				<div class="card-img">
-					<img src="{{ site.url }}/{{ junta.picture }}" alt="">
+					<img src="{{ junta.picture }}" alt="">
 				</div>
 				<div class="card-info">
 					<h3>{{ junta.nombre }}</h3>
